Setup external quiz
